# physics-engine

./: CHANGES  CMakeLists.txt  Makefile
.github/workflows/: cmake.yml
include/math/: Matrix.hpp  Vector2D.hpp
simulations/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/math/: Matrix.cpp  Vector2D.cpp
tests/: CMakeLists.txt  matrix_test.cpp  vectors_test.cpp
